@@ -98,7 +98,7 @@
     <target name="prepare_repository_classpath" depends="check_jars_dir" unless="have.local.jars">
         <echo message="using repository classpath"/>
     	  <!-- Russell's proxy -->
-        <setproxy proxyhost="www-proxy.us.oracle.com" proxyport="80"/>
+        <!--<setproxy proxyhost="www-proxy.us.oracle.com" proxyport="80"/>-->
         <typedef classpath="${jars.dir}/ant-dependencies.jar" resource="dependencies.properties" />
         <dependencies pathId="base.classpath" fileSetId="distributed.jars">
         	  <!-- get from http://www.ibiblio.org/maven/rhino/jars/ -->
